--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -7,8 +7,9 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  padding: 20px; /* Optional: Add padding to the components */
-  min-height: 50px; /* Increase the minimum height to create more spacing */
+  padding: 20px;
+  align-items: center;
+  min-height: 50px;
   height: 100vh;
 }
 
