--- a/src/components/home/homecomponents/CarouselSection.css
+++ b/src/components/home/homecomponents/CarouselSection.css
@@ -5,6 +5,7 @@
   padding: 40px 20px;
   background-color: #000;
   color: #fff;
+  margin-top: 15%;
 }
 
 .carousel-toggle {
@@ -78,7 +79,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  padding: 30px;
+  padding: 100px;
   background: linear-gradient(transparent, rgba(0, 0, 0, 0.9));
   border-radius: 0 0 8px 8px;
   text-align: center;
@@ -154,6 +155,7 @@
   .carousel-section {
     margin: 20px auto;
     padding: 20px 10px;
+    margin-top: 0;
   }
 
   .carousel-container {
@@ -210,4 +212,4 @@
   .carousel-slide img {
     padding: 5px;
   }
-} 
+}
