--- a/src/components/products/Products.css
+++ b/src/components/products/Products.css
@@ -1,3 +1,18 @@
+/* Common Styles */
+.Product-header,
+.button-container,
+.product-container,
+.description,
+.image iframe,
+.btn-holder,
+.btn,
+.virtual-btn,
+.package-details,
+.xptech-banner,
+#xptechbanner {
+  box-sizing: border-box;
+}
+
 /* Title Code */
 .Product-header {
   color: white;
@@ -18,12 +33,14 @@
   left: 50%;
   transform: translateX(-50%);
   z-index: 2;
+  text-align: center;
 }
 
 .button-container h1 {
   font-size: 68px;
 }
 
+/* Product Container */
 .product-container {
   display: flex;
   align-items: center;
@@ -33,16 +50,17 @@
 }
 
 .description {
-  width: 40vw; /* Adjust the width as needed */
+  width: 40vw;
   margin-left: 100px;
 }
 
 .image iframe {
-  width: 60vw; /* Adjust the width as needed */
-  height: 90vh; /* Set an appropriate height for the iframe */
+  width: 60vw;
+  height: 90vh;
   padding-top: 7%;
 }
 
+/* Buttons */
 .btn-holder {
   display: flex;
   flex-wrap: wrap;
@@ -51,19 +69,7 @@
   margin: 10px auto 35px;
 }
 
-.btn {
-  display: inline-block;
-  background-color: transparent;
-  color: white;
-  border: none;
-  cursor: pointer;
-  padding: 20px;
-  margin: 0px 25px 15px;
-  min-width: 150px;
-  transition: 0.3s;
-  font-size: 20px;
-}
-
+.btn,
 .virtual-btn {
   display: inline-block;
   background-color: transparent;
@@ -72,8 +78,18 @@
   cursor: pointer;
   padding: 20px;
   transition: 0.3s;
+}
+
+.btn {
+  margin: 0 25px 15px;
+  min-width: 150px;
+  font-size: 20px;
+}
+
+.virtual-btn {
   font-size: 15px;
 }
+
 .virtual-btn a {
   color: white;
   text-decoration: underline;
@@ -96,15 +112,15 @@
 .btn.hover-border-1::before {
   top: 0;
   left: 0;
-  border-left: 1px solid rgb(255, 255, 255);
-  border-top: 1px solid rgb(255, 255, 255);
+  border-left: 1px solid white;
+  border-top: 1px solid white;
 }
 
 .btn.hover-border-1::after {
   bottom: 0;
   right: 0;
-  border-right: 1px solid rgb(255, 255, 255);
-  border-bottom: 1px solid rgb(255, 255, 255);
+  border-right: 1px solid white;
+  border-bottom: 1px solid white;
 }
 
 .btn.hover-border-1:hover::before,
@@ -113,11 +129,13 @@
   height: 98%;
 }
 
+/* Background Image */
 .background-image img {
   opacity: 0.9;
   max-width: 100vw;
 }
 
+/* Package Details */
 .package-details {
   background-color: white;
   color: black;
@@ -127,66 +145,7 @@
   border-radius: 20px;
 }
 
-/* Media query for smaller screens */
-@media (max-width: 768px) {
-  .product-container {
-    flex-direction: column;
-  }
-
-  .button-container {
-    position: absolute;
-    bottom: 60%;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 2;
-  }
-
-  .component {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: fit-content;
-  }
-
-  .button-container h1 {
-    font-size: 30px;
-    display: flex;
-  }
-
-  .description {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    width: 70vw;
-    justify-content: center;
-    align-items: center;
-    font-size: 16px;
-    margin-left: 1px;
-    text-align: center;
-  }
-  .description p {
-    margin-bottom: 5vh;
-  }
-
-  .image iframe {
-    width: 100vw; /* Adjust the width as needed */
-    height: 300px; /* Set an appropriate height for smaller screens */
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .btn {
-    margin: 0px 25px 15px;
-    font-size: 15px;
-  }
-}
-
-@media (max-width: 768px) {
-  .package-details li {
-    text-align: left;
-  }
-}
-
+/* XPTech Banner */
 .xptech-banner {
   width: 100%;
   max-width: 800px;
@@ -211,23 +170,70 @@
   width: 100%;
 }
 
-@media screen and (max-width: 768px) {
+/* Media Queries */
+@media (max-width: 768px) {
+  .product-container {
+    flex-direction: column;
+  }
+
+  .button-container {
+    bottom: 50% !important;
+  }
+
+  .button-container h1 {
+    font-size: 30px;
+  }
+
+  .description {
+    width: 70vw;
+    margin-left: 1px;
+    font-size: 16px;
+    text-align: center;
+  }
+
+  .description p {
+    margin-bottom: 5vh;
+  }
+
+  .image iframe {
+    width: 100vw;
+    height: 300px;
+  }
+
+  .btn {
+    font-size: 15px;
+  }
+
+  .package-details li {
+    text-align: left;
+  }
+
   .xptech-banner {
     max-width: 200px;
     margin: 8px auto;
   }
-  
+
   #xptechbanner {
     padding: 8px;
   }
 }
 
-@media screen and (max-width: 375px) {
+@media (max-width: 425px) {
+  .button-container h1 {
+    font-size: 20px !important;
+  }
+
+  .button-container {
+    bottom: 60% !important;
+  }
+}
+
+@media (max-width: 375px) {
   .xptech-banner {
     max-width: 150px;
     margin: 6px auto;
   }
-  
+
   #xptechbanner {
     padding: 6px;
   }
