--- a/src/components/home/homecomponents/HomeComponent.css
+++ b/src/components/home/homecomponents/HomeComponent.css
@@ -36,6 +36,7 @@
   width: 100%;
   height: 100vh;
   object-fit: cover;
+  overflow: hidden;
 }
 
 .mobile-image {
@@ -178,9 +179,11 @@
 
   .landing_page_video {
     height: 50vh;
+    overflow: hidden; 
   }
   .video-overlay {
     position: relative;
+    overflow: hidden;
   }
   .text-overlay {
     position: absolute;
