--- a/src/components/home/homecomponents/HomeComponent.css
+++ b/src/components/home/homecomponents/HomeComponent.css
@@ -34,7 +34,7 @@
 /* Video Landing styling */
 .landing_page_video {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   object-fit: cover;
 }
 
@@ -278,7 +278,14 @@
     font-size: 12px;
   }
 }
-
+@media screen and (min-width: 1440px) {
+  .landing_Page_video_container {
+    height: 100vh;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+  }
+}
 /* gallery */
 
 /* HomeComponent.css */
