--- a/src/components/home/homecomponents/HomeComponent.css
+++ b/src/components/home/homecomponents/HomeComponent.css
@@ -34,9 +34,8 @@
 /* Video Landing styling */
 .landing_page_video {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   object-fit: cover;
-  overflow: hidden;
 }
 
 .mobile-image {
@@ -168,6 +167,14 @@
   .wcontainer {
     margin-bottom: 20vh;
   }
+  .text-overlay {
+    height: 50vh;
+  }
+}
+@media screen and (max-width: 480px) {
+  .text-overlay {
+    height: 50vh;
+  }
 }
 @media screen and (max-width: 768px) {
   .header-logo {
@@ -179,11 +186,9 @@
 
   .landing_page_video {
     height: 50vh;
-    overflow: hidden; 
   }
   .video-overlay {
     position: relative;
-    overflow: hidden;
   }
   .text-overlay {
     position: absolute;
@@ -273,7 +278,14 @@
     font-size: 12px;
   }
 }
-
+@media screen and (min-width: 1440px) {
+  .landing_Page_video_container {
+    height: 100vh;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+  }
+}
 /* gallery */
 
 /* HomeComponent.css */
@@ -754,11 +766,14 @@
 
 @media screen and (max-width: 768px) {
   .australian-made-banner {
-    top: 100%;
+    margin-top: 50px;
   }
   .australian-made-banner span {
     font-size: 18px;
     letter-spacing: 0.5px;
+  }
+  .vContainer {
+    padding-top: 100px;
   }
 }
 
